--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="setting_item_icon_size">48dp</dimen>
     <dimen name="hero_element_height">250dp</dimen>
     <dimen name="hero_element_padding_left">80dp</dimen>
+    <dimen name="alert_dialog_padding">24dp</dimen>
 </resources>
