--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="hero_element_height">250dp</dimen>
     <dimen name="hero_element_padding_left">80dp</dimen>
     <dimen name="alert_dialog_padding">24dp</dimen>
+    <dimen name="alert_button_size">250dp</dimen>
+    <dimen name="stop_alert_text_size">36sp</dimen>
 </resources>
