--- a/mobile/src/main/res/values/themes.xml
+++ b/mobile/src/main/res/values/themes.xml
@@ -17,6 +17,11 @@
         <item name="actionBarStyle">@style/ActionBarStyle</item>
     </style>
 
+    <style name="AppTheme.Alert">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
     <style name="ActionBarStyle" parent="Widget.AppCompat.Light.ActionBar.Solid">
         <item name="background">@android:color/transparent</item>
         <item name="displayOptions">none</item>
