--- a/mobile/src/main/res/values-v21/themes.xml
+++ b/mobile/src/main/res/values-v21/themes.xml
@@ -6,4 +6,12 @@
         <item name="android:statusBarColor">@color/primary_dark</item>
     </style>
 
+
+    <style name="AppTheme.Alert">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:navigationBarColor">@color/primary_dark</item>
+    </style>
+
+
 </resources>
