--- a/wear/src/main/res/layout/act_trigger_alarm.xml
+++ b/wear/src/main/res/layout/act_trigger_alarm.xml
@@ -11,34 +11,47 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="5dp"
-        android:background="@android:color/white"
+        android:padding="20dp"
+        android:background="@color/primary"
         app:layout_box="all">
 
+        <!--<TextView-->
+        <!--android:id="@+id/node_name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:gravity="center"-->
+        <!--android:textColor="@color/secondary_text_light"-->
+        <!--android:textSize="20sp"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--android:fontFamily="sans-serif-light"-->
+        <!--tools:text="Google Nexus 6"/>-->
+
         <TextView
-            android:id="@+id/node_name"
-            android:layout_width="match_parent"
+            android:id="@+id/error_message"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:gravity="center"
-            android:textColor="@color/primary_text"
-            android:textSize="20sp"
-            android:maxLines="1"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
             android:ellipsize="end"
             android:fontFamily="sans-serif-light"
-            tools:text="Google Nexus 6"/>
+            android:visibility="gone"
+            tools:text="Error connecting"/>
 
         <android.support.wearable.view.CircledImageView
             android:id="@+id/action"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/node_name"
             android:src="@drawable/ic_action_play"
-            app:circle_color="@color/primary"
+            app:circle_color="@android:color/white"
             tools:layout_width="320px"
             tools:layout_height="320px"
             tools:src="@drawable/ic_action_play"
-            tools:background="@color/primary"/>
+            tools:background="@android:color/white"/>
+        <!--android:layout_above="@id/node_name"/>-->
 
     </RelativeLayout>
 </android.support.wearable.view.BoxInsetLayout>
